fixed broken layout for reports

--- a/analytics/static/analytics/general.sass
+++ b/analytics/static/analytics/general.sass
@@ -1,77 +1,75 @@
 $title-color: #009688
 
 .report-body
-	border: 1px solid #3ebeb4
-	border-radius: 20px
-	padding: 10px
-
+    border: 1px solid #3ebeb4
+    border-radius: 20px
+    padding: 10px
+    overflow: auto
+    width: 100%
 
 #general-report-header
-	height: 10%
-	display: block
-	h3
-		color: $title-color
+    height: 10%
+    display: block
+    h3
+        color: $title-color
 
-	ul
-		float: right
-		display: inline-flex
-		width: 50%
-		height: 15%
+    ul
+        float: right
+        display: inline-flex
+        width: 50%
+        height: 15%
 
-		li
-			margin-right: 2%
-			width: 50%
-			color: white
+        li
+            margin-right: 2%
+            width: 50%
+            color: white
 
-			div.selected
-				background-color: #4dcfbd 
-				width: 100%
-				text-align: center
-				border-radius: 20px
+            div.selected
+                background-color: #4dcfbd 
+                width: 100%
+                text-align: center
+                border-radius: 20px
 
-			div
-				background-color: #0f8a9a
-				width: 100%
-				text-align: center
-				border-radius: 20px
+            div
+                background-color: #0f8a9a
+                width: 100%
+                text-align: center
+                border-radius: 20px
 
 
 
 #most-used-tags-header
-	background: linear-gradient(to right, #0e8999, #6bf0ce)
-	height: 40px
-	border-radius: 10px
-	color: #ffffff
+    background: linear-gradient(to right, #0e8999, #6bf0ce)
+    height: 40px
+    border-radius: 10px
+    color: #ffffff
+    padding-top: 1px
+    margin-top: 10px
+
+    h4
+        margin-left: 1%
 
 .data-container
-	width: 80px
-	height: 40px
+    width: 80px 
+    height: 40px
 
 .tag-cloud
-	border-radius: 25px
-	color: #ffffff
-	width: 80px
+    border-radius: 25px
+    color: #ffffff
+    width: 80px
 
-	
+    
 
 .tag-name
-	color: #ffffff
-	font-size: 10px
+    color: #ffffff
+    font-size: 10px
 
 
 #left-data-selector
-	background: linear-gradient( #0e8999, #6bf0ce )
-	width: 30%
+    background: linear-gradient( #0e8999, #6bf0ce )
 
-
-.middle-chart
-	width: 30%
-	float: left
-	h4
-		color: $title-color
-
-.right-chart
-	width: 30%
-	float: left
-	h4
-		color: $title-color
+.chart
+    width: 30%
+    float: left
+    h4
+        color: $title-color
